--- a/contact-us.html
+++ b/contact-us.html
@@ -14,25 +14,30 @@
     <meta
         content="DigiPants is a full-service digital marketing agency based in Lucknow. In today's digital business world, you need a partner who can help you take advantage of marketing opportunities across a variety of channels in realtime."
         name="description">
-    <meta content="DigiPants - Digital Marketing Agency" property="og:title">
-    <meta
-        content="DigiPants is a full-service digital marketing agency based in Lucknow. In today's digital business world, you need a partner who can help you take advantage of marketing opportunities across a variety of channels in realtime."
-        property="og:description">
-    <meta content="DigiPants - Digital Marketing Agency" property="twitter:title">
-    <meta
-        content="DigiPants is a full-service digital marketing agency based in Lucknow. In today's digital business world, you need a partner who can help you take advantage of marketing opportunities across a variety of channels in realtime."
-        property="twitter:description">
+    <meta property="og:title" content="DigiPants - Digital Marketing Agency">
+    <meta property="og:description"
+        content="DigiPants is a full-service digital marketing agency based in Lucknow. In today's digital business world, you need a partner who can help you take advantage of marketing opportunities across a variety of channels in realtime.">
+    <meta property="og:image" content="https://www.digipants.com/website.png">
+    <meta property="og:image:secure_url" content="https://www.digipants.com/website.png">
+    <meta property="og:image:width" content="2500">
+    <meta property="og:image:height" content="1330">
+    <meta property="og:url" content="https://www.digipants.com">
+    <meta property="og:site_name" content="DigiPants">
     <meta property="og:type" content="website">
-    <meta content="summary_large_image" name="twitter:card">
+    <meta name="fb_admins_meta_tag" content="digitalpants">
+    <meta property="fb:admin" content="digitalpants">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="DigiPants - Digital Marketing Agency">
+    <meta name="twitter:description"
+        content="DigiPants is a full-service digital marketing agency based in Lucknow. In today's digital business world, you need a partner who can help you take advantage of marketing opportunities across a variety of channels in realtime.">
+    <meta name="twitter:image" content="https://www.digipants.com/website.png">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
     <script
         type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
-    <link href="https://www.digipants.com/63238e717124a8c9a4c94e41/63238e87c8b87c52b315c5a6_32x32.png"
-        rel="shortcut icon" type="image/x-icon">
-    <link href="https://www.digipants.com/63238e717124a8c9a4c94e41/63238e8c10e5f319d3f3e312_256x256.jpg"
-        rel="apple-touch-icon">
+    <link href="https://www.digipants.com/Final Logo Black.ico" rel="shortcut icon" type="image/x-icon">
+    <link href="https://www.digipants.com/logo256x279.ico" rel="apple-touch-icon">
 </head>
 
 <body>
@@ -75,22 +80,6 @@
                             <div>Login</div>
                             <div class="underline-hover" style="width: 0%; height: 1.5px;"></div>
                         </a>
-                        <div class="buy-template-container"><a
-                                href="https://webflow.com/templates/html/sapiens-agency-website-template"
-                                data-w-id="b303d2c1-e854-800f-1d08-b130c8e6ee28" target="_blank"
-                                class="button w-inline-block">
-                                <div class="button-flex">
-                                    <div class="button-text">
-                                        <div>Buy Template</div>
-                                    </div>
-                                    <div class="button-arrow-box">
-                                        <div class="button-arrow-container">
-                                            <div class="button-arrow-left"></div>
-                                            <div class="button-arrow-right"></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </a></div>
                     </nav>
                     <div class="menu-button w-nav-button" style="-webkit-user-select: text;" aria-label="menu"
                         role="button" tabindex="0" aria-controls="w-nav-overlay-0" aria-haspopup="menu"
@@ -528,7 +517,7 @@
     <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=63238e717124a8c9a4c94e41"
         type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
         crossorigin="anonymous"></script>
-    <script src="js/webflow.43cfba714.js" type="text/javascript"></script>
+    <script src="js/app.js" type="text/javascript"></script>
     <!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
 </body>
 
