--- a/index.html
+++ b/index.html
@@ -36,10 +36,8 @@
     <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
     <script
         type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
-    <link href="https://www.digipants.com/Final Logo Black.ico"
-        rel="shortcut icon" type="image/x-icon">
-    <link href="https://www.digipants.com/logo256x279.ico"
-        rel="apple-touch-icon">
+    <link href="https://www.digipants.com/Final Logo Black.ico" rel="shortcut icon" type="image/x-icon">
+    <link href="https://www.digipants.com/logo256x279.ico" rel="apple-touch-icon">
 </head>
 
 <body>
@@ -543,185 +541,6 @@
                 </div>
             </div>
         </div>
-        <!--<div id="Works" class="content-section-works wf-section">
-            <div class="content-wrapper w-container">
-                <div data-w-id="b3cdfa69-7b06-2fa6-f4c8-b4fb160d2701" class="heading-intro">
-                    <div class="max-400-pixels">
-                        <p style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d;"
-                            class="hero-mini-title">works</p>
-                        <h2 class="h2">Making your Ideas a Reality</h2>
-                        <div class="paragraph-box">
-                            <p>Our research-based strategy means we kick-off our work with you by immersing ourselves in your industry, your vision and
-                            your culture.</p>
-                        </div>
-                    </div>
-                    <div style="transform: translate3d(0%, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
-                        class="divider-line"></div><img
-                        src="https://www.digipants.com/63238e717124a8c9a4c94e41/632625d03bb4e866f1507f35_Mobile-hand.webp"
-                        loading="lazy"
-                        style="opacity: 1; transform: translate3d(0px, 0.0285px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; will-change: transform;"
-                        width="160" data-w-id="c4f9a9c4-f794-4d07-23d8-619def16b073" alt="" class="right-icon device">
-                </div>
-                <div class="work-flex">
-                    <div class="work-preview">
-                        <div data-w-id="38485e71-c588-a32a-9e37-55ba251e76e2"
-                            style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
-                            class="work-preview-item w-dyn-list">
-                            <div role="list" class="w-dyn-items">
-                                <div role="listitem" class="w-dyn-item"><a
-                                        data-w-id="eafa1408-e186-1647-eaf6-baa9ffa098e4"
-                                        href="/work/stationery-design-for-crypto-startup"
-                                        class="link-preview w-inline-block"><img
-                                            src="https://www.digipants.com/63238e717124a8c9a4c94e41/6326272de6b80394ecdf4c93_Work-bg-box.webp"
-                                            loading="lazy"
-                                            srcset="https://www.digipants.com/63238e717124a8c9a4c94e41/6326272de6b80394ecdf4c93_Work-bg-box-p-500.webp 500w, https://www.digipants.com/63238e717124a8c9a4c94e41/6326272de6b80394ecdf4c93_Work-bg-box-p-800.webp 800w, https://www.digipants.com/63238e717124a8c9a4c94e41/6326272de6b80394ecdf4c93_Work-bg-box.webp 1058w"
-                                            sizes="(max-width: 479px) 90vw, (max-width: 767px) 45vw, (max-width: 1439px) 46vw, 600px"
-                                            alt="">
-                                        <div style="background-image:url(&quot;https://www.digipants.com/632622573bb4e8a1d6504d34/63262558e9b813882a3d2063_Work_thumbnail_1.jpg&quot;)"
-                                            class="change-hover-image">
-                                            <div style="opacity: 1; display: flex; width: 0%; height: 600px;"
-                                                class="work-hover-bg">
-                                                <div style="display: none; opacity: 0; transform: translate3d(0px, 10px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
-                                                    class="work-hover-content">
-                                                    <div class="button-outline gray">View Work</div>
-                                                </div>
-                                            </div>
-                                            <div data-w-id="f1641b75-cf2c-9089-1e62-595fed9668ac"
-                                                style="display: block; width: 0%; height: 600px;" class="on-scroll-bg">
-                                            </div>
-                                        </div>
-                                    </a>
-                                    <div data-w-id="a84324b4-d0fe-13a9-3a65-c85423d4548e" class="utility-text-box"><a
-                                            href="/work-category/branding" class="peview-link">Branding</a>
-                                        <div class="margin-top mobile-5-pixels">
-                                            <p>Build a unique Website with Sapiens Webflow Template</p>
-                                        </div>
-                                        <div style="transform: translate3d(0%, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
-                                            class="divider-line"></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="work-preview-item no-margin w-dyn-list">
-                            <div role="list" class="w-dyn-items">
-                                <div data-w-id="d8412412-41e5-5ef9-e67b-7caa8c9b63a9"
-                                    style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
-                                    role="listitem" class="w-dyn-item"><a
-                                        data-w-id="d8412412-41e5-5ef9-e67b-7caa8c9b63aa"
-                                        href="/work/realistic-3d-model-of-living-room"
-                                        class="link-preview w-inline-block"><img
-                                            src="https://www.digipants.com/63238e717124a8c9a4c94e41/63262895e9b813ebbe3d505b_Work-horizontal.jpg"
-                                            loading="lazy"
-                                            srcset="https://www.digipants.com/63238e717124a8c9a4c94e41/63262895e9b813ebbe3d505b_Work-horizontal-p-500.jpg 500w, https://www.digipants.com/63238e717124a8c9a4c94e41/63262895e9b813ebbe3d505b_Work-horizontal-p-800.jpg 800w, https://www.digipants.com/63238e717124a8c9a4c94e41/63262895e9b813ebbe3d505b_Work-horizontal.jpg 1060w"
-                                            sizes="(max-width: 479px) 90vw, (max-width: 767px) 45vw, (max-width: 1439px) 46vw, 600px"
-                                            alt="">
-                                        <div style="background-image:url(&quot;https://www.digipants.com/632622573bb4e8a1d6504d34/6326251a300959f993282cac_Work_thumbnail_3.jpg&quot;)"
-                                            class="change-hover-image">
-                                            <div style="opacity: 1; display: flex; width: 0%; height: 450px;"
-                                                class="work-hover-bg">
-                                                <div style="display: none; opacity: 0; transform: translate3d(0px, 10px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
-                                                    class="work-hover-content">
-                                                    <div class="button-outline gray">View Work</div>
-                                                </div>
-                                            </div>
-                                            <div data-w-id="1576e2f6-bc4a-ba36-c4da-168f1b5b54a1"
-                                                style="display: block; width: 0%; height: 449.992px;"
-                                                class="on-scroll-bg"></div>
-                                        </div>
-                                    </a>
-                                    <div data-w-id="d8412412-41e5-5ef9-e67b-7caa8c9b63ad" class="utility-text-box"><a
-                                            href="/work-category/web-design" class="peview-link">Web Design</a>
-                                        <div class="margin-top mobile-5-pixels">
-                                            <p>Build a unique Website with Sapiens Webflow Template</p>
-                                        </div>
-                                        <div style="transform: translate3d(0%, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
-                                            class="divider-line"></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="work-preview last">
-                        <div data-w-id="097b3647-0376-a90b-f09c-ee454502de30"
-                            style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
-                            class="work-preview-item w-dyn-list">
-                            <div role="list" class="w-dyn-items">
-                                <div role="listitem" class="w-dyn-item"><a
-                                        data-w-id="097b3647-0376-a90b-f09c-ee454502de33"
-                                        href="/work/brand-design-for-a-packing-company"
-                                        class="link-preview w-inline-block"><img
-                                            src="https://www.digipants.com/63238e717124a8c9a4c94e41/63262895e9b813ebbe3d505b_Work-horizontal.jpg"
-                                            loading="lazy"
-                                            srcset="https://www.digipants.com/63238e717124a8c9a4c94e41/63262895e9b813ebbe3d505b_Work-horizontal-p-500.jpg 500w, https://www.digipants.com/63238e717124a8c9a4c94e41/63262895e9b813ebbe3d505b_Work-horizontal-p-800.jpg 800w, https://www.digipants.com/63238e717124a8c9a4c94e41/63262895e9b813ebbe3d505b_Work-horizontal.jpg 1060w"
-                                            sizes="(max-width: 479px) 90vw, (max-width: 767px) 45vw, (max-width: 1439px) 46vw, 600px"
-                                            alt="">
-                                        <div style="background-image:url(&quot;https://www.digipants.com/632622573bb4e8a1d6504d34/6326253712d9dbc970ab3e9a_Work_thumbnail_2.jpg&quot;)"
-                                            class="change-hover-image">
-                                            <div style="opacity: 1; display: flex; width: 0%; height: 449.992px;"
-                                                class="work-hover-bg">
-                                                <div style="display: none; opacity: 0; transform: translate3d(0px, 10px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
-                                                    class="work-hover-content">
-                                                    <div class="button-outline gray">View Work</div>
-                                                </div>
-                                            </div>
-                                            <div data-w-id="85c0a8b8-9f26-880b-8a16-cdec6a44d284"
-                                                style="display: block; width: 0%; height: 449.992px;"
-                                                class="on-scroll-bg"></div>
-                                        </div>
-                                    </a>
-                                    <div data-w-id="097b3647-0376-a90b-f09c-ee454502de36" class="utility-text-box"><a
-                                            href="/work-category/social-media" class="peview-link">Social Media</a>
-                                        <div class="margin-top mobile-5-pixels">
-                                            <p>Build a unique Website with Sapiens Webflow Template</p>
-                                        </div>
-                                        <div style="transform: translate3d(0%, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
-                                            class="divider-line"></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div data-w-id="f9229dfb-f861-f617-f95f-b8a62d5f738b"
-                            style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
-                            class="work-preview-item last w-dyn-list">
-                            <div role="list" class="w-dyn-items">
-                                <div role="listitem" class="w-dyn-item"><a
-                                        data-w-id="f9229dfb-f861-f617-f95f-b8a62d5f738e"
-                                        href="/work/website-design-for-popular-company"
-                                        class="link-preview w-inline-block"><img
-                                            src="https://www.digipants.com/63238e717124a8c9a4c94e41/6326272de6b80394ecdf4c93_Work-bg-box.webp"
-                                            loading="lazy"
-                                            srcset="https://www.digipants.com/63238e717124a8c9a4c94e41/6326272de6b80394ecdf4c93_Work-bg-box-p-500.webp 500w, https://www.digipants.com/63238e717124a8c9a4c94e41/6326272de6b80394ecdf4c93_Work-bg-box-p-800.webp 800w, https://www.digipants.com/63238e717124a8c9a4c94e41/6326272de6b80394ecdf4c93_Work-bg-box.webp 1058w"
-                                            sizes="(max-width: 479px) 90vw, (max-width: 767px) 45vw, (max-width: 1439px) 46vw, 600px"
-                                            alt="">
-                                        <div style="background-image:url(&quot;https://www.digipants.com/632622573bb4e8a1d6504d34/632624aac5878571fadbd3e1_Work_thumbnail_4.jpg&quot;)"
-                                            class="change-hover-image">
-                                            <div style="opacity: 1; display: flex; width: 0%; height: 600px;"
-                                                class="work-hover-bg">
-                                                <div style="display: none; opacity: 0; transform: translate3d(0px, 10px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
-                                                    class="work-hover-content">
-                                                    <div class="button-outline gray">View Work</div>
-                                                </div>
-                                            </div>
-                                            <div data-w-id="72538f55-b4a9-70c7-2d6b-ea634ecc9f35"
-                                                style="display: block; width: 0%; height: 600px;" class="on-scroll-bg">
-                                            </div>
-                                        </div>
-                                    </a>
-                                    <div data-w-id="f9229dfb-f861-f617-f95f-b8a62d5f7391" class="utility-text-box"><a
-                                            href="/work-category/branding" class="peview-link">Branding</a>
-                                        <div class="margin-top mobile-5-pixels">
-                                            <p>Build a unique Website with Sapiens Webflow Template</p>
-                                        </div>
-                                        <div style="transform: translate3d(0%, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
-                                            class="divider-line"></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>-->
         <div class="content-section double wf-section">
             <div class="content-wrapper w-container">
                 <div class="heading-box">
@@ -2546,8 +2365,10 @@
                             </div>
                             <div class="top-margin _20-pixels">
                                 <div class="footer-title">Inquiries</div>
-                                <div class="top-margin"><a href="tel:+919651828041" class="footer-contact-link">965 1828 041</a>
-                                    <div><a href="mailto:support@digipants.com" class="footer-contact-link">support@digipants.com</a></div>
+                                <div class="top-margin"><a href="tel:+919651828041" class="footer-contact-link">965 1828
+                                        041</a>
+                                    <div><a href="mailto:support@digipants.com"
+                                            class="footer-contact-link">support@digipants.com</a></div>
                                 </div>
                             </div>
                         </div>
@@ -2593,7 +2414,7 @@
     <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=63238e717124a8c9a4c94e41"
         type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
         crossorigin="anonymous"></script>
-    <script src="js/webflow.43cfba714.js" type="text/javascript"></script>
+    <script src="js/app.js" type="text/javascript"></script>
     <!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
 </body>
 
