--- a/service/web-development.html
+++ b/service/web-development.html
@@ -14,25 +14,30 @@
     <meta
         content="DigiPants is a full-service digital marketing agency based in Lucknow. In today's digital business world, you need a partner who can help you take advantage of marketing opportunities across a variety of channels in realtime."
         name="description">
-    <meta content="DigiPants - Digital Marketing Agency" property="og:title">
-    <meta
-        content="DigiPants is a full-service digital marketing agency based in Lucknow. In today's digital business world, you need a partner who can help you take advantage of marketing opportunities across a variety of channels in realtime."
-        property="og:description">
-    <meta content="DigiPants - Digital Marketing Agency" property="twitter:title">
-    <meta
-        content="DigiPants is a full-service digital marketing agency based in Lucknow. In today's digital business world, you need a partner who can help you take advantage of marketing opportunities across a variety of channels in realtime."
-        property="twitter:description">
+    <meta property="og:title" content="DigiPants - Digital Marketing Agency">
+    <meta property="og:description"
+        content="DigiPants is a full-service digital marketing agency based in Lucknow. In today's digital business world, you need a partner who can help you take advantage of marketing opportunities across a variety of channels in realtime.">
+    <meta property="og:image" content="https://www.digipants.com/website.png">
+    <meta property="og:image:secure_url" content="https://www.digipants.com/website.png">
+    <meta property="og:image:width" content="2500">
+    <meta property="og:image:height" content="1330">
+    <meta property="og:url" content="https://www.digipants.com">
+    <meta property="og:site_name" content="DigiPants">
     <meta property="og:type" content="website">
-    <meta content="summary_large_image" name="twitter:card">
+    <meta name="fb_admins_meta_tag" content="digitalpants">
+    <meta property="fb:admin" content="digitalpants">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="DigiPants - Digital Marketing Agency">
+    <meta name="twitter:description"
+        content="DigiPants is a full-service digital marketing agency based in Lucknow. In today's digital business world, you need a partner who can help you take advantage of marketing opportunities across a variety of channels in realtime.">
+    <meta name="twitter:image" content="https://www.digipants.com/website.png">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="/63238e717124a8c9a4c94e41/css/style.css" rel="stylesheet" type="text/css">
     <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
     <script
         type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
-    <link href="https://www.digipants.com/63238e717124a8c9a4c94e41/63238e87c8b87c52b315c5a6_32x32.png"
-        rel="shortcut icon" type="image/x-icon">
-    <link href="https://www.digipants.com/63238e717124a8c9a4c94e41/63238e8c10e5f319d3f3e312_256x256.jpg"
-        rel="apple-touch-icon">
+    <link href="https://www.digipants.com/Final Logo Black.ico" rel="shortcut icon" type="image/x-icon">
+    <link href="https://www.digipants.com/logo256x279.ico" rel="apple-touch-icon">
 </head>
 
 <body>
