git hub integration

--- a/about-us.html
+++ b/about-us.html
@@ -1273,7 +1273,7 @@
                                     <div class="footer-text-medium">GE-1, Vivek Complex, Adjacent to Novelty Cinema,
                                         <br>Lucknow-226024
                                     </div>
-                                    <div><a href="https://www.google.com/maps/preview" target="_blank"
+                                    <div><a href="https://goo.gl/maps/b27AwXFCefedJuZs7" target="_blank"
                                             class="footer-contact-link">View on Maps</a></div>
                                 </div>
                             </div>
