--- a/contact-us.html
+++ b/contact-us.html
@@ -150,9 +150,10 @@
                                         class="side-contact">
                                         <div class="side-contact-title">Address</div>
                                         <div class="top-margin">
-                                            <div class="answer">Riverside 25,<br>San Francisco, California</div>
+                                            <div class="answer">GE-1, Vivek Complex, Aliganj,<br>Lucknow-226024(U.P.),
+                                                India</div>
                                         </div>
-                                        <div class="top-margin"><a href="https://www.google.com/maps/preview"
+                                        <div class="top-margin"><a href="https://goo.gl/maps/EAVZH4kxVJKuc7SB7"
                                                 target="_blank" class="text-link">View on Maps</a></div>
                                         <div style="transform: translate3d(0%, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
                                             class="divider-line"></div>
@@ -162,8 +163,9 @@
                                             style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
                                             class="top-margin _20-pixels">
                                             <div class="side-contact-title">Call Us</div>
-                                            <div class="top-margin"><a href="#" class="text-link">800-234-567</a></div>
-                                            <div><a href="#" class="text-link">800-234-568</a></div>
+                                            <div class="top-margin"><a href="tel:+919651828041"
+                                                    class="text-link">965-1828-041</a></div>
+                                            <div><a href="tel:+916387149303" class="text-link">638-7149-303</a></div>
                                         </div>
                                         <div style="transform: translate3d(-101%, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
                                             class="divider-line"></div>
@@ -176,8 +178,8 @@
                                             <div class="top-margin">
                                                 <div class="answer">Drop us an email and we’ll be in touch asap.</div>
                                             </div>
-                                            <div class="top-margin _5-pixels"><a href="#"
-                                                    class="text-link">hello@website.com</a></div>
+                                            <div class="top-margin _5-pixels"><a href="mailto:support@digipants.com"
+                                                    class="text-link">support@digipants.com</a></div>
                                         </div>
                                         <div style="transform: translate3d(-101%, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
                                             class="divider-line"></div>
@@ -188,20 +190,21 @@
                                             class="top-margin _20-pixels">
                                             <div class="side-contact-title">Follow us</div>
                                             <div class="top-margin"><a data-w-id="d56b0b1a-d760-e329-0b7c-efc562a4b244"
-                                                    href="#" target="_blank"
+                                                    href="https://www.facebook.com/digitalpants/" target="_blank"
                                                     class="social-icon-rounded facebook w-inline-block">
                                                     <div class="social-icons-container">
                                                         <div class="social-icon-up facebook"></div>
                                                         <div class="social-icon-down facebook"></div>
                                                     </div>
-                                                </a><a data-w-id="d56b0b1a-d760-e329-0b7c-efc562a4b248" href="#"
-                                                    target="_blank" class="social-icon-rounded twittter w-inline-block">
+                                                </a><a data-w-id="d56b0b1a-d760-e329-0b7c-efc562a4b248"
+                                                    href="https://twitter.com/digipantstweets" target="_blank"
+                                                    class="social-icon-rounded twittter w-inline-block">
                                                     <div class="social-icons-container">
                                                         <div class="social-icon-up twitter"></div>
                                                         <div class="social-icon-down twitter"></div>
                                                     </div>
-                                                </a><a data-w-id="d56b0b1a-d760-e329-0b7c-efc562a4b24c" href="#"
-                                                    target="_blank"
+                                                </a><a data-w-id="d56b0b1a-d760-e329-0b7c-efc562a4b24c"
+                                                    href="https://www.instagram.com/digipantsinsta/" target="_blank"
                                                     class="social-icon-rounded instagram w-inline-block">
                                                     <div class="social-icons-container">
                                                         <div class="social-icon-up instagram"></div>
@@ -220,14 +223,15 @@
                                 <div>
                                     <h2 class="h2">We are Here to Help</h2>
                                     <div>
-                                        <p class="subtitle">Sapiens is the perfect Business Webflow Template you need
-                                            for your Company or Startup.</p>
+                                        <p class="subtitle">DigiPants takes care of your Digital Marketing needs so
+                                            that you can focus on your business.</p>
                                     </div>
                                 </div>
                                 <div class="divider-line"></div>
                             </div>
                             <div class="form-block w-form">
-                                <form method="get" name="wf-form-Contact-Form" data-name="Contact Form"
+                                <form method="post" data-netlify="true" name="wf-form-Contact-Form"
+                                    data-name="Contact Form"
                                     style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
                                     data-w-id="d56b0b1a-d760-e329-0b7c-efc562a4b25a" id="email-form"
                                     class="contact-form-flex" aria-label="Contact Form">
@@ -250,7 +254,7 @@
                                                 class="w-checkbox checkbox-field"><input type="checkbox"
                                                     name="Checkbox-2" data-name="Checkbox 2" id="checkbox"
                                                     class="w-checkbox-input checkbox"><span for="Checkbox-2"
-                                                    class="checkbox-label w-form-label">Webflow
+                                                    class="checkbox-label w-form-label">digipants
                                                     Development</span></label><label
                                                 class="w-checkbox checkbox-field"><input type="checkbox"
                                                     name="Checkbox-3" data-name="Checkbox 3" id="checkbox"
@@ -466,7 +470,7 @@
                                     <div class="footer-text-medium">GE-1, Vivek Complex, Adjacent to Novelty Cinema,
                                         <br>Lucknow-226024
                                     </div>
-                                    <div><a href="https://www.google.com/maps/preview" target="_blank"
+                                    <div><a href="https://goo.gl/maps/b27AwXFCefedJuZs7" target="_blank"
                                             class="footer-contact-link">View on Maps</a></div>
                                 </div>
                             </div>
