--- a/index.html
+++ b/index.html
@@ -1920,7 +1920,8 @@
                         style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
                         class="logo last"><img
                             src="https://www.digipants.com/63238e717124a8c9a4c94e41/632735bde6b80336a8ede93c_Fb.webp"
-                            loading="lazy" width="176.5" alt=""></div>
+                            loading="lazy" width="176.5" alt="">
+                    </div>
                 </div>
             </div>
         </div>
@@ -1952,8 +1953,7 @@
                                     <h3 class="h3-title">We are in a new digital era stay updated</h3>
                                 </div>
                                 <div class="paragraph-box">
-                                    <p>Create virtually unlimited designs with Sapiens Agency template combine its
-                                        multiple layouts, enjoy a modern and beautiful design that will.</p>
+                                    <p>Start your digital marketing journey with DigiPants' creative team and years of experience.</p>
                                 </div>
                                 <div class="cta-form w-form">
                                     <form data-name="Newsletter" data-netlify="true" name="wf-form-Newsletter"
@@ -2137,7 +2137,7 @@
                         </div>
                         <div role="listitem" class="item-preview w-dyn-item"><a
                                 data-w-id="7e4775fe-99e7-ceb3-733f-560ac7ba1c12"
-                                href="/post/your-first-online-store-with-webflow"
+                                href="/post/your-first-online-store-with-digipants"
                                 class="link-preview-rounded w-inline-block"><img
                                     src="https://www.digipants.com/63238e717124a8c9a4c94e41/63262895e9b813ebbe3d505b_Work-horizontal.jpg"
                                     loading="lazy" width="530"
@@ -2150,7 +2150,7 @@
                             <div class="blog-preview">
                                 <div class="blog-preview-left"><a href="/category/studio"
                                         class="category-link">Content</a></div>
-                                <div class="blog-preview-right"><a href="/post/your-first-online-store-with-webflow"
+                                <div class="blog-preview-right"><a href="/post/your-first-online-store-with-digipants"
                                         class="preview-link">A Hubspot Research Report 2022</a>
                                     <div class="paragraph-box _5-pixels">
                                         <p class="answer">The State of Media & Content Planning
@@ -2373,21 +2373,24 @@
                             </div>
                         </div>
                         <div class="footer-social-icons">
-                            <div><a data-w-id="8b02b3b6-1f8e-ec53-f995-c7ae198f660b"
+                            <div>
+                                <a data-w-id="8b02b3b6-1f8e-ec53-f995-c7ae198f660b"
                                     href="https://twitter.com/digipantstweets" target="_blank"
                                     class="social-icon-rounded facebook w-inline-block">
                                     <div class="social-icons-container">
                                         <div class="social-icon-up facebook"></div>
                                         <div class="social-icon-down facebook"></div>
                                     </div>
-                                </a><a data-w-id="8b02b3b6-1f8e-ec53-f995-c7ae198f660f"
+                                </a>
+                                <a data-w-id="8b02b3b6-1f8e-ec53-f995-c7ae198f660f"
                                     href="https://www.facebook.com/digitalpants/" target="_blank"
                                     class="social-icon-rounded twittter w-inline-block">
                                     <div class="social-icons-container">
                                         <div class="social-icon-up twitter"></div>
                                         <div class="social-icon-down twitter"></div>
                                     </div>
-                                </a><a data-w-id="8b02b3b6-1f8e-ec53-f995-c7ae198f6613"
+                                </a>
+                                <a data-w-id="8b02b3b6-1f8e-ec53-f995-c7ae198f6613"
                                     href="https://www.instagram.com/digipantsinsta/" target="_blank"
                                     class="social-icon-rounded instagram w-inline-block">
                                     <div class="social-icons-container"
