--- a/login-page.html
+++ b/login-page.html
@@ -140,8 +140,7 @@
                         </div>
                     </div>
                     <div>
-                        <p class="sign-in-text">Don’t have an account? <a
-                                href="#" class="link">Sign up</a>
+                        <p class="sign-in-text">Don’t have an account? <a href="#" class="link">Sign up</a>
                             or <a href="#" class="link">Forgot your password</a></p>
                     </div>
                     <div class="more-buttons">
@@ -267,7 +266,7 @@
                                     <div class="footer-text-medium">GE-1, Vivek Complex, Adjacent to Novelty Cinema,
                                         <br>Lucknow-226024
                                     </div>
-                                    <div><a href="https://www.google.com/maps/preview" target="_blank"
+                                    <div><a href="https://goo.gl/maps/b27AwXFCefedJuZs7" target="_blank"
                                             class="footer-contact-link">View on Maps</a></div>
                                 </div>
                             </div>
