--- a/service/web-development.html
+++ b/service/web-development.html
@@ -190,7 +190,7 @@
                                     <h6>Events- Stunning Invitations, Guest List, Ticket Sales.</h6>
                                     </p>
                                     <p>Image by <a
-                                            href="https://unsplash.com/es/colecciones/soRFjAdkiPQ/sapiens-webflow-template"
+                                            href="https://unsplash.com/es/colecciones/soRFjAdkiPQ/sapiens-digipants-template"
                                             target="_blank">Credit</a></p>
                                 </div>
                                 <div class="contact-support">
@@ -370,7 +370,7 @@
                                     <div class="footer-text-medium">GE-1, Vivek Complex, Adjacent to Novelty Cinema,
                                         <br>Lucknow-226024
                                     </div>
-                                    <div><a href="https://www.google.com/maps/preview" target="_blank"
+                                    <div><a href="https://goo.gl/maps/b27AwXFCefedJuZs7" target="_blank"
                                             class="footer-contact-link">View on Maps</a></div>
                                 </div>
                             </div>
