--- a/blog.html
+++ b/blog.html
@@ -129,7 +129,8 @@
                                             </div>
                                             <div>
                                                 <div class="paragraph-box">
-                                                    <p>Sapiens is a Webflow Non Code Template for Creatives like you</p>
+                                                    <p>Sapiens is a digipants Non Code Template for Creatives like you
+                                                    </p>
                                                 </div>
                                             </div>
                                             <div class="button-box"><a href="/post/we-launch-sapiens-template-this-week"
@@ -165,7 +166,7 @@
                                 <div role="list" class="w-dyn-items">
                                     <div role="listitem" class="post-item w-dyn-item">
                                         <div class="flex-center"><a data-w-id="887588db-8ecd-434c-0ae3-f0a470d45ef8"
-                                                href="/post/your-first-online-store-with-webflow"
+                                                href="/post/your-first-online-store-with-digipants"
                                                 class="polaroid-preview w-inline-block"><img
                                                     src="https://www.digipants.com/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2).webp"
                                                     loading="lazy" width="585.5"
@@ -180,17 +181,17 @@
                                                     class="category-link">Studio</a>
                                                 <div>
                                                     <div class="preview-link-box"><a
-                                                            href="/post/your-first-online-store-with-webflow"
+                                                            href="/post/your-first-online-store-with-digipants"
                                                             class="preview-link-big">Your First Online Store With
                                                             DigiPants</a></div>
                                                 </div>
                                                 <div>
                                                     <div class="paragraph-box _5-pixels">
-                                                        <p class="text-preview">Sapiens is a Webflow Non Code Template
+                                                        <p class="text-preview">Sapiens is a digipants Non Code Template
                                                             for Creatives like you</p>
                                                     </div>
                                                 </div>
-                                                <div><a href="/post/your-first-online-store-with-webflow"
+                                                <div><a href="/post/your-first-online-store-with-digipants"
                                                         data-w-id="a5841f31-ee0e-c8a2-62d8-0c7e43beeca5"
                                                         class="underline-link w-inline-block">
                                                         <div>Read more</div>
@@ -223,7 +224,7 @@
                                                 </div>
                                                 <div>
                                                     <div class="paragraph-box _5-pixels">
-                                                        <p class="text-preview">Sapiens is a Webflow Non Code Template
+                                                        <p class="text-preview">Sapiens is a digipants Non Code Template
                                                             for Creatives like you</p>
                                                     </div>
                                                 </div>
@@ -239,7 +240,7 @@
                                     </div>
                                     <div role="listitem" class="post-item w-dyn-item">
                                         <div class="flex-center"><a data-w-id="887588db-8ecd-434c-0ae3-f0a470d45ef8"
-                                                href="/post/learn-why-webflow-is-the-future-of-web"
+                                                href="/post/learn-why-digipants-is-the-future-of-web"
                                                 class="polaroid-preview w-inline-block"><img
                                                     src="https://www.digipants.com/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2).webp"
                                                     loading="lazy" width="585.5"
@@ -254,17 +255,18 @@
                                                     class="category-link">Design</a>
                                                 <div>
                                                     <div class="preview-link-box"><a
-                                                            href="/post/learn-why-webflow-is-the-future-of-web"
-                                                            class="preview-link-big">Learn Why Webflow Is The Future Of
+                                                            href="/post/learn-why-digipants-is-the-future-of-web"
+                                                            class="preview-link-big">Learn Why digipants Is The Future
+                                                            Of
                                                             Web</a></div>
                                                 </div>
                                                 <div>
                                                     <div class="paragraph-box _5-pixels">
-                                                        <p class="text-preview">Sapiens is a Webflow Non Code Template
+                                                        <p class="text-preview">Sapiens is a digipants Non Code Template
                                                             for Creatives like you</p>
                                                     </div>
                                                 </div>
-                                                <div><a href="/post/learn-why-webflow-is-the-future-of-web"
+                                                <div><a href="/post/learn-why-digipants-is-the-future-of-web"
                                                         data-w-id="a5841f31-ee0e-c8a2-62d8-0c7e43beeca5"
                                                         class="underline-link w-inline-block">
                                                         <div>Read more</div>
@@ -276,7 +278,7 @@
                                     </div>
                                     <div role="listitem" class="post-item w-dyn-item">
                                         <div class="flex-center"><a data-w-id="887588db-8ecd-434c-0ae3-f0a470d45ef8"
-                                                href="/post/how-to-be-a-successful-designer-using-webflow"
+                                                href="/post/how-to-be-a-successful-designer-using-digipants"
                                                 class="polaroid-preview w-inline-block"><img
                                                     src="https://www.digipants.com/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2).webp"
                                                     loading="lazy" width="585.5"
@@ -291,17 +293,17 @@
                                                     class="category-link">Studio</a>
                                                 <div>
                                                     <div class="preview-link-box"><a
-                                                            href="/post/how-to-be-a-successful-designer-using-webflow"
+                                                            href="/post/how-to-be-a-successful-designer-using-digipants"
                                                             class="preview-link-big">How To Be A Successful Designer
-                                                            Using Webflow</a></div>
+                                                            Using digipants</a></div>
                                                 </div>
                                                 <div>
                                                     <div class="paragraph-box _5-pixels">
-                                                        <p class="text-preview">Sapiens is a Webflow Non Code Template
+                                                        <p class="text-preview">Sapiens is a digipants Non Code Template
                                                             for Creatives like you</p>
                                                     </div>
                                                 </div>
-                                                <div><a href="/post/how-to-be-a-successful-designer-using-webflow"
+                                                <div><a href="/post/how-to-be-a-successful-designer-using-digipants"
                                                         data-w-id="a5841f31-ee0e-c8a2-62d8-0c7e43beeca5"
                                                         class="underline-link w-inline-block">
                                                         <div>Read more</div>
@@ -515,7 +517,7 @@
                                     <div class="footer-text-medium">GE-1, Vivek Complex, Adjacent to Novelty Cinema,
                                         <br>Lucknow-226024
                                     </div>
-                                    <div><a href="https://www.google.com/maps/preview" target="_blank"
+                                    <div><a href="https://goo.gl/maps/b27AwXFCefedJuZs7" target="_blank"
                                             class="footer-contact-link">View on Maps</a></div>
                                 </div>
                             </div>
