--- a/works.html
+++ b/works.html
@@ -122,7 +122,7 @@
                                 </div>
                                 <div>
                                     <p style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d;"
-                                        class="hero-subtitle">Find the latest changes made to this template</p>
+                                        class="hero-subtitle">Find the latest projects of DigiPants</p>
                                 </div>
                             </div>
                         </div>
@@ -172,7 +172,7 @@
                             <div class="utility-text-box"><a href="/work-category/branding"
                                     class="peview-link">Branding</a>
                                 <div class="margin-top">
-                                    <p>Build a unique Website with Sapiens Webflow Template</p>
+                                    <p>Build a unique Website with Sapiens digipants Template</p>
                                 </div>
                                 <div class="divider-line"></div>
                             </div>
@@ -201,7 +201,7 @@
                             <div class="utility-text-box"><a href="/work-category/social-media"
                                     class="peview-link">Social Media</a>
                                 <div class="margin-top">
-                                    <p>Build a unique Website with Sapiens Webflow Template</p>
+                                    <p>Build a unique Website with Sapiens digipants Template</p>
                                 </div>
                                 <div class="divider-line"></div>
                             </div>
@@ -230,7 +230,7 @@
                             <div class="utility-text-box"><a href="/work-category/web-design" class="peview-link">Web
                                     Design</a>
                                 <div class="margin-top">
-                                    <p>Build a unique Website with Sapiens Webflow Template</p>
+                                    <p>Build a unique Website with Sapiens digipants Template</p>
                                 </div>
                                 <div class="divider-line"></div>
                             </div>
@@ -259,7 +259,7 @@
                             <div class="utility-text-box"><a href="/work-category/branding"
                                     class="peview-link">Branding</a>
                                 <div class="margin-top">
-                                    <p>Build a unique Website with Sapiens Webflow Template</p>
+                                    <p>Build a unique Website with Sapiens digipants Template</p>
                                 </div>
                                 <div class="divider-line"></div>
                             </div>
@@ -288,7 +288,7 @@
                             <div class="utility-text-box"><a href="/work-category/social-media"
                                     class="peview-link">Social Media</a>
                                 <div class="margin-top">
-                                    <p>Build a unique Website with Sapiens Webflow Template</p>
+                                    <p>Build a unique Website with Sapiens digipants Template</p>
                                 </div>
                                 <div class="divider-line"></div>
                             </div>
@@ -317,7 +317,7 @@
                             <div class="utility-text-box"><a href="/work-category/web-design" class="peview-link">Web
                                     Design</a>
                                 <div class="margin-top">
-                                    <p>Build a unique Website with Sapiens Webflow Template</p>
+                                    <p>Build a unique Website with Sapiens digipants Template</p>
                                 </div>
                                 <div class="divider-line"></div>
                             </div>
@@ -431,7 +431,7 @@
                                     <div class="footer-text-medium">GE-1, Vivek Complex, Adjacent to Novelty Cinema,
                                         <br>Lucknow-226024
                                     </div>
-                                    <div><a href="https://www.google.com/maps/preview" target="_blank"
+                                    <div><a href="https://goo.gl/maps/b27AwXFCefedJuZs7" target="_blank"
                                             class="footer-contact-link">View on Maps</a></div>
                                 </div>
                             </div>
