--- a/contact-us.html
+++ b/contact-us.html
@@ -296,7 +296,7 @@
                 <div>
                     <div class="heading-full">
                         <h2 class="h2 no-margin">Instagram</h2><a data-w-id="299cbdd2-8b78-3eba-02f5-85c34238eef5"
-                            href="#" class="insta-handle" style="opacity: 0;">@Sapiens</a>
+                            href="#" class="insta-handle" style="opacity: 0;">@DigiPants</a>
                     </div>
                     <div class="flex-instagram"><a data-w-id="299cbdd2-8b78-3eba-02f5-85c34238eef8"
                             href="https://www.instagram.com/" target="_blank" class="insta-pic w-inline-block"
