--- a/contact-us.html
+++ b/contact-us.html
@@ -246,26 +246,36 @@
                                             maxlength="256" name="Mobile" data-name="Mobile" placeholder="Mobile"
                                             id="field" required=""></div>
                                     <div class="checkbox-container">
-                                        <div class="flex-checkbox"><label class="w-checkbox checkbox-field"><input
-                                                    type="checkbox" name="Checkbox-1" data-name="Checkbox 1"
+                                        <div class="flex-checkbox">
+                                            <label class="w-checkbox checkbox-field">
+                                                <input type="checkbox" name="Checkbox-1" data-name="Checkbox 1"
                                                     id="checkbox" class="w-checkbox-input checkbox"><span
                                                     for="Checkbox-1"
-                                                    class="checkbox-label w-form-label">Webdesign</span></label><label
-                                                class="w-checkbox checkbox-field"><input type="checkbox"
-                                                    name="Checkbox-2" data-name="Checkbox 2" id="checkbox"
+                                                    class="checkbox-label w-form-label">Web Design</span>
+                                            </label>
+                                            <label class="w-checkbox checkbox-field">
+                                                <input type="checkbox" name="Checkbox-2" data-name="Checkbox 2" id="checkbox"
                                                     class="w-checkbox-input checkbox"><span for="Checkbox-2"
-                                                    class="checkbox-label w-form-label">digipants
-                                                    Development</span></label><label
-                                                class="w-checkbox checkbox-field"><input type="checkbox"
-                                                    name="Checkbox-3" data-name="Checkbox 3" id="checkbox"
+                                                    class="checkbox-label w-form-label">Web
+                                                    Development</span>
+                                            </label>
+                                            <label class="w-checkbox checkbox-field">
+                                                <input type="checkbox" name="Checkbox-3" data-name="Checkbox 3" id="checkbox"
                                                     class="w-checkbox-input checkbox"><span for="Checkbox-3"
-                                                    class="checkbox-label w-form-label">Other</span></label></div>
+                                                    class="checkbox-label w-form-label">SEO</span>
+                                            </label>
+                                            <label class="w-checkbox checkbox-field">
+                                                <input type="checkbox" name="Checkbox-3" data-name="Checkbox 3" id="checkbox"
+                                                    class="w-checkbox-input checkbox"><span for="Checkbox-3"
+                                                    class="checkbox-label w-form-label">Social Media Marketing</span>
+                                            </label>
+                                        </div>
                                     </div><select name="Budget" data-name="Budget" id="field"
                                         class="select-field w-select">
                                         <option value="">Budget</option>
-                                        <option value="$900 -$1,900">$900 -$1,900</option>
-                                        <option value="$2,000 - $4,900">$2,000 - $4,900</option>
-                                        <option value="$4,900 - $9,900">$4,900 - $9,900</option>
+                                        <option value="35000 - 75000">35000 - 75000</option>
+                                        <option value="75000 - 150000">75000 - 150000</option>
+                                        <option value="150000 - 350000">150000 - 350000</option>
                                     </select><textarea name="Message" maxlength="5000" data-name="Message"
                                         placeholder="Your message..." id="field"
                                         class="textarea w-input"></textarea><input type="submit" value="Submit"
