--- a/index.html
+++ b/index.html
@@ -1904,22 +1904,22 @@
                     <div data-w-id="e513b7bf-d394-4a4c-a271-0a53eafd4519"
                         style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
                         class="logo"><img
-                            src="https://www.digipants.com/63238e717124a8c9a4c94e41/632735bdcd40a898e008de78_Nike.webp"
-                            loading="lazy" width="148.5" alt=""></div>
+                            src="63238e717124a8c9a4c94e41/Trinetra (300 × 131px).png"
+                            loading="lazy" width="176.5" alt=""></div>
                     <div data-w-id="bb43cb7a-05c5-acd2-12e4-887952fedbfe"
                         style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
                         class="logo"><img
-                            src="https://www.digipants.com/63238e717124a8c9a4c94e41/6327360fc587856ce4ea1124_Airbnb.png"
-                            loading="lazy" width="67.5" alt=""></div>
+                            src="63238e717124a8c9a4c94e41/zescher (300 × 131px).png"
+                            loading="lazy" width="250.5" alt=""></div>
                     <div data-w-id="35dbe387-9daf-b12e-1956-05581aa9e577"
                         style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
                         class="logo"><img
-                            src="https://www.digipants.com/63238e717124a8c9a4c94e41/632735bd4d1e995da3e1eb11_Google.png"
-                            loading="lazy" width="148.5" alt=""></div>
+                            src="63238e717124a8c9a4c94e41/best-solve.png"
+                            loading="lazy" width="200.5" alt=""></div>
                     <div data-w-id="f9ffb279-982f-db58-de8c-84f8168bb12d"
                         style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
                         class="logo last"><img
-                            src="https://www.digipants.com/63238e717124a8c9a4c94e41/632735bde6b80336a8ede93c_Fb.webp"
+                            src="63238e717124a8c9a4c94e41/LPB (300 × 131px).png"
                             loading="lazy" width="176.5" alt="">
                     </div>
                 </div>
