--- a/public/index.html
+++ b/public/index.html
@@ -1803,8 +1803,7 @@
                                     width="115" data-w-id="a85fda5e-84c2-e7dd-ca4b-0b48b1e260fa" alt=""
                                     class="icon-people"></div>
                             <div class="testimonial-right">
-                                <p class="testimonial-text">I went through three marketing companies before I found MS
-                                    ROI. I've recommended them to several friends.</p>
+                                <p class="testimonial-text">I went through three marketing companies before I found DigiPants. I've recommended them to several friends.</p>
                                 <div>
                                     <div class="testimonial-details">
                                         <div class="testimonial-mini-pic _4"></div>
