--- a/src/login-page.html
+++ b/src/login-page.html
@@ -81,7 +81,7 @@
                             <div class="underline-hover" style="width: 0%; height: 1.5px;"></div>
                         </a>
                     </nav>
-                    <div class="menu-button w-nav-button" style="-webkit-user-select: text;" aria-label="menu"
+                    <div class="menu-button w-nav-button" style="-webkit-user-select: text; user-select: text;" aria-label="menu"
                         role="button" tabindex="0" aria-controls="w-nav-overlay-0" aria-haspopup="menu"
                         aria-expanded="false">
                         <div class="w-icon-nav-menu"></div>
