--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,8 @@
     <meta property="og:title" content="DigiPants - Digital Marketing Agency">
     <meta property="og:description"
         content="DigiPants is a full-service digital marketing agency based in Lucknow. In today's digital business world, you need a partner who can help you take advantage of marketing opportunities across a variety of channels in realtime.">
-    <meta property="og:image" content="https://www.digipants.com/website.png">
-    <meta property="og:image:secure_url" content="https://www.digipants.com/website.png">
+    <meta property="og:image" content="https://www.digipants.com/assets/website.png">
+    <meta property="og:image:secure_url" content="https://www.digipants.com/assets/website.png">
     <meta property="og:image:width" content="2500">
     <meta property="og:image:height" content="1330">
     <meta property="og:url" content="https://www.digipants.com">
@@ -30,7 +30,7 @@
     <meta name="twitter:title" content="DigiPants - Digital Marketing Agency">
     <meta name="twitter:description"
         content="DigiPants is a full-service digital marketing agency based in Lucknow. In today's digital business world, you need a partner who can help you take advantage of marketing opportunities across a variety of channels in realtime.">
-    <meta name="twitter:image" content="https://www.digipants.com/website.png">
+    <meta name="twitter:image" content="https://www.digipants.com/assets/website.png">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="/assets/css/style.css" rel="stylesheet" type="text/css">
     <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
@@ -1900,20 +1900,20 @@
                 <div class="clients-logos">
                     <div data-w-id="e513b7bf-d394-4a4c-a271-0a53eafd4519"
                         style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
-                        class="logo"><img src="assets/63238e717124a8c9a4c94e41/Trinetra (300 × 131px).png" loading="lazy"
-                            width="176.5" alt=""></div>
+                        class="logo"><img src="assets/63238e717124a8c9a4c94e41/Trinetra (300 × 131px).png"
+                            loading="lazy" width="176.5" alt=""></div>
                     <div data-w-id="bb43cb7a-05c5-acd2-12e4-887952fedbfe"
                         style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
                         class="logo"><img src="assets/63238e717124a8c9a4c94e41/zescher (300 × 131px).png" loading="lazy"
                             width="250.5" alt=""></div>
                     <div data-w-id="35dbe387-9daf-b12e-1956-05581aa9e577"
                         style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
-                        class="logo"><img src="assets/63238e717124a8c9a4c94e41/best-solve.png" loading="lazy" width="200.5"
-                            alt=""></div>
+                        class="logo"><img src="assets/63238e717124a8c9a4c94e41/best-solve.png" loading="lazy"
+                            width="200.5" alt=""></div>
                     <div data-w-id="f9ffb279-982f-db58-de8c-84f8168bb12d"
                         style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
-                        class="logo last"><img src="assets/63238e717124a8c9a4c94e41/LPB (300 × 131px).png" loading="lazy"
-                            width="176.5" alt="">
+                        class="logo last"><img src="assets/63238e717124a8c9a4c94e41/LPB (300 × 131px).png"
+                            loading="lazy" width="176.5" alt="">
                     </div>
                 </div>
             </div>
