--- a/public/service/search-engine-optimization/index.html
+++ b/public/service/search-engine-optimization/index.html
@@ -17,8 +17,8 @@
     <meta property="og:title" content="DigiPants - Digital Marketing Agency">
     <meta property="og:description"
         content="DigiPants is a full-service digital marketing agency based in Lucknow. In today's digital business world, you need a partner who can help you take advantage of marketing opportunities across a variety of channels in realtime.">
-    <meta property="og:image" content="https://www.digipants.com/website.png">
-    <meta property="og:image:secure_url" content="https://www.digipants.com/website.png">
+    <meta property="og:image" content="https://www.digipants.com/assets/website.png">
+    <meta property="og:image:secure_url" content="https://www.digipants.com/assets/website.png">
     <meta property="og:image:width" content="2500">
     <meta property="og:image:height" content="1330">
     <meta property="og:url" content="https://www.digipants.com">
@@ -30,7 +30,7 @@
     <meta name="twitter:title" content="DigiPants - Digital Marketing Agency">
     <meta name="twitter:description"
         content="DigiPants is a full-service digital marketing agency based in Lucknow. In today's digital business world, you need a partner who can help you take advantage of marketing opportunities across a variety of channels in realtime.">
-    <meta name="twitter:image" content="https://www.digipants.com/website.png">
+    <meta name="twitter:image" content="https://www.digipants.com/assets/website.png">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="/63238e717124a8c9a4c94e41/assets/css/style.css" rel="stylesheet" type="text/css">
     <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
