--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,31 @@
     <link href="/assets/Final Logo Black.ico"" rel=" shortcut icon" type="image/x-icon">
     <link href="https://www.digipants.com/assets/logo256x279.ico" rel="apple-touch-icon"><!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RGELLSWQWR"></script>
+    <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "Organization",
+      "url": "https://digipants.com/",
+      "name": "DigiPants | Digital Marketing Agency",
+      "description": "Full-service digital marketing agency specializing in Web Development, SEO, PPC, social media marketing, and content marketing.",
+      "logo": "https://digipants.com/assets/logo256x279.ico",
+      "sameAs": [
+        "https://www.facebook.com/digitalpants",
+        "https://www.instagram.com/digipantsinsta",
+        "https://www.twitter.com/digipantstweets"
+      ],
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+91-965-1828-041",
+        "contactType": "Customer Service",
+        "email": "support@digipants.com",
+        "contactOption": "TollFree",
+        "areaServed": "IN"
+      }
+    }
+    </script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RGELLSWQWR"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
