--- a/src/index.html
+++ b/src/index.html
@@ -696,6 +696,62 @@
                             </div>
                         </div>
                     </div>
+                    <div data-w-id="48461a41-2f5b-0218-426c-e664d4c18510"
+                        style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
+                        class="team-item _2">
+                        <div data-w-id="48461a41-2f5b-0218-426c-e664d4c18511"
+                            style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
+                            class="link-preview-hidden"><img
+                                src="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632639a9b80942739be00eab_Team_bg.webp"
+                                loading="lazy"
+                                sizes="(max-width: 479px) 86vw, (max-width: 767px) 43vw, (max-width: 1279px) 25vw, 307px"
+                                width="307"
+                                srcset="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632639a9b80942739be00eab_Team_bg-p-500.webp 500w, https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632639a9b80942739be00eab_Team_bg.webp 614w"
+                                alt="">
+                            <div class="change-this-image team-6">
+                                <div style="opacity: 0; display: none; width: 0%; height: 385px;" class="hover-bg">
+                                    <div style="display: none; opacity: 0;" class="hover-content">
+                                        <div class="social-icons">
+                                            <div style="transform: translate3d(0px, 15px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 0; transform-style: preserve-3d;"
+                                                class="social-1"><a data-w-id="48461a41-2f5b-0218-426c-e664d4c18518"
+                                                    href="https://www.facebook.com/iamkrishnaditya" target="_blank"
+                                                    class="social-icon-rounded facebook w-inline-block">
+                                                    <div class="social-icons-container"
+                                                        style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
+                                                        <div class="social-icon-up facebook"></div>
+                                                        <div class="social-icon-down facebook"></div>
+                                                    </div>
+                                                </a></div>
+                                            <div style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d;"
+                                                class="social-2"><a data-w-id="48461a41-2f5b-0218-426c-e664d4c1851d"
+                                                    href="https://www.twitter.com/iamkrishnadigi" target="_blank"
+                                                    class="social-icon-rounded twittter w-inline-block">
+                                                    <div class="social-icons-container">
+                                                        <div class="social-icon-up twitter"></div>
+                                                        <div class="social-icon-down twitter"></div>
+                                                    </div>
+                                                </a></div>
+                                            <div style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d;"
+                                                class="social-3"><a data-w-id="48461a41-2f5b-0218-426c-e664d4c18522"
+                                                    href="https://www.instagram.com/iamkrishnaditya/" target="_blank"
+                                                    class="social-icon-rounded instagram w-inline-block">
+                                                    <div class="social-icons-container">
+                                                        <div class="social-icon-up instagram"></div>
+                                                        <div class="social-icon-down instagram"></div>
+                                                    </div>
+                                                </a></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="team-text-box">
+                            <h5 class="team-name">Aditya Bajpai</h5>
+                            <div>
+                                <div class="team-title">SEO</div>
+                            </div>
+                        </div>
+                    </div>
                     <div data-w-id="48461a41-2f5b-0218-426c-e664d4c1852c"
                         style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
                         class="team-item _3">
@@ -861,7 +917,7 @@
                         <div class="team-text-box">
                             <h5 class="team-name">Harshita Verma</h5>
                             <div>
-                                <div class="team-title">Creater</div>
+                                <div class="team-title">Content</div>
                             </div>
                         </div>
                     </div>
