--- a/src/index.html
+++ b/src/index.html
@@ -1728,7 +1728,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div><a href="/contact-us class=" button-outline w-inline-block">
+                            <div><a href="/contact-us" class=" button-outline w-inline-block">
                                     <div class="text-on-button">Know More</div>
                                 </a></div>
                         </div>
