--- a/src/pricing.html
+++ b/src/pricing.html
@@ -254,7 +254,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="pricing-button-box"><a href="/contact-us class=" pricing-button w-inline-block">
+                            <div class="pricing-button-box"><a href="/contact-us"
+                                    class=" pricing-button w-inline-block">
                                     <div class="text-on-button">Choose Plan</div>
                                 </a></div>
                         </div>
@@ -376,7 +377,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="pricing-button-box"><a href="/contact-us class=" pricing-button w-inline-block">
+                            <div class="pricing-button-box"><a href="/contact-us"
+                                    class=" pricing-button w-inline-block">
                                     <div class="text-on-button">Choose Plan</div>
                                 </a></div>
                         </div>
@@ -523,7 +525,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="pricing-button-box"><a href="/contact-us class=" pricing-button w-inline-block">
+                            <div class="pricing-button-box"><a href="/contact-us"
+                                    class=" pricing-button w-inline-block">
                                     <div class="text-on-button">Choose Plan</div>
                                 </a></div>
                         </div>
@@ -670,7 +673,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="pricing-button-box"><a href="/contact-us class=" pricing-button w-inline-block">
+                            <div class="pricing-button-box"><a href="/contact-us"
+                                    class=" pricing-button w-inline-block">
                                     <div class="text-on-button">Contact Us</div>
                                 </a></div>
                         </div><img
@@ -847,21 +851,20 @@
         netlifyIdentity.init();
         const netlifyIdentity = require('netlify-identity-widget');
 
-            netlifyIdentity.on('init', user => {
-                if (!user) {
-                    // User is not authenticated, redirect to login page
-                    window.location.href = '/login-page.html';
-                } else {
-                    // User is authenticated, show booking form
-                    showBookingForm();
-                }
-            });
-            function showBookingForm() {
-                const user = netlifyIdentity.currentUser();
-                const email = user.email;
-                // Display the booking form
+        netlifyIdentity.on('init', user => {
+            if (!user) {
+                // User is not authenticated, redirect to login page
+                window.location.href = '/login-page.html';
+            } else {
+                // User is authenticated, show booking form
+                showBookingForm();
             }
-            
+        });
+        function showBookingForm() {
+            const user = netlifyIdentity.currentUser();
+            const email = user.email;
+            // Display the booking form
+        }
     </script>
     <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=63238e717124a8c9a4c94e41"
         type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
